- Add sign up button to login page

--- a/Disertatie/Assets/en.lproj/Localizable.strings
+++ b/Disertatie/Assets/en.lproj/Localizable.strings
@@ -8,3 +8,11 @@
 
 "Welcome" = "Welcome";
 "Rectify" = "Rectify";
+
+// Login
+
+"Username" = "Username";
+"Password" = "Password";
+"Login" = "Login";
+"ForgotPassword" = "Forgot password?";
+"SignUpMessage" = "New? Sign-up for a new account.";
