--- a/Disertatie/Assets/ro.lproj/Localizable.strings
+++ b/Disertatie/Assets/ro.lproj/Localizable.strings
@@ -8,3 +8,12 @@
 
 "Welcome" = "Bine ati venit";
 "Rectify" = "Rectifica";
+
+
+// Login
+
+"Username" = "Utilizator";
+"Password" = "Parola";
+"Login" = "Conectare";
+"ForgotPassword" = "Ati uitat parola?";
+"SignUpMessage" = "Nou? Sign-up for a new account.";
