- Create custom component for ImageButton

--- a/Disertatie/Assets/ro.lproj/Localizable.strings
+++ b/Disertatie/Assets/ro.lproj/Localizable.strings
@@ -30,6 +30,9 @@
 "SignUp" = "Înregistrare";
 "LoginMessage" = "Deja membru? Conecteaza-te.";
 
+// Chats
+"Chats" = "Chats";
+
 // Chat
 
 "Original" = "Original";
